test/kubernetes/e2e/features/server_tls/testdata/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute1
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "*.example.com"
  rules:
    - backendRefs:
        - name: httpbin
          port: 8000
